[package]
name = "entomologist"
version = "0.1.0"
edition = "2024"

[features]
default = []
log = ["dep:log", "dep:simple_logger"]

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.41"
clap = { version = "4.5.26", features = ["derive"] }
log = { version = "0.4.27", optional = true }
rand = "0.9.1"
serde = { version = "1.0.217", features = ["derive"] }
simple_logger = { version = "5.0.0", optional = true }
tempfile = "3.20.0"
thiserror = "2.0.11"
toml = "0.8.19"
