[package]
name = "entomologist"
version = "0.1.0"
edition = "2024"

[features]
default = []
log = ["dep:log", "dep:simple_logger"]
# tui = ["dep:crossterm", "dep:futures", "dep:ratatui", "dep:tokio", "dep:color-eyre"]

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.41"
clap = { version = "4.5.26", features = ["derive", "wrap_help"] }
log = { version = "0.4.27", optional = true }
rand = "0.9.1"
serde = { version = "1.0.217", features = ["derive"] }
simple_logger = { version = "5.0.0", optional = true }
tempfile = "3.20.0"
thiserror = "2.0.11"
toml = "0.8.19"

crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = { version = "0.3.31" }
ratatui = { version = "0.29.0" }
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = { version = "0.6.3" }


#crossterm = { version = "0.28.1", features = ["event-stream"], optional = true }
#futures = { version = "0.3.31", optional = true }
#ratatui = { version = "0.29.0", optional = true }
#tokio = { version = "1.40.0", features = ["full"], optional = true }
#color-eyre = { version = "0.6.3", optional = true }
